<resources>
    <string name="app_name">MyShop</string>
    <string name="mainactivity">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_show_splash">Don\'t show splash</string>
    <string name="current_task">Current</string>
    <string name="done_task">Done</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="adding_task">Adding task</string>
    <string name="hint_title">Title</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="dialog_error_empty_title">Please, enter the title</string>
    <string name="dialog_removing_message">Are you sure want to delete this task?</string>
    <string name="removed">Remove</string>
    <string name="need">Хочу купить</string>
    <string name="purchased">Куплено</string>
    <string name="add_purchase">Добавить покупку</string>
    <string name="input_purchase">Введите покупку</string>
    <string name="purchased_purchases">Покупки</string>
    <string name="select_all">Выделить все</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip"><![CDATA[Skip >]]></string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_account_sign_up">Нет аккаунта? Подписаться</string>
    <string name="login">Авторизоваться</string>
    <string name="forgot_pass">Забыли пароль? Сброс</string>
    <string name="go_back">Вернуться</string>
    <string name="reset_pass">Сбросить пароль</string>
    <string name="my_profile">Профиль</string>
    <string name="sell">Sell</string>
    <string name="logout">Выйти</string>
    <string name="about">О нас</string>
    <string name="share">share</string>

    <string name="home">Главная</string>
    <string name="product_name">Название продукта</string>
    <string name="feedback">Обратная связь</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="all_goods">Все товары</string>
    <string name="jewelry">Украшения и аксессуары</string>
    <string name="beauty">Красота и здоровье</string>
    <string name="electric">Электроника и техника</string>
    <string name="travel">Путешествия</string>
    <string name="all_for_home">Все для дома</string>
    <string name="entertainment">Досуг и развлечения</string>
    <string name="food_delivery">Доставка еды</string>
    <string name="services">Услуги</string>
    <string name="finance">Страхование и финансы</string>
    <string name="closing">Одежда и обувь</string>
    <string name="china_goods">Китайские товары</string>
    <string name="foreign_brand">Брендовые товары</string>
    <string name="subscribe">забота о клиенте превыше всего</string>
    <string name="title_home">Наши товары вас удивят</string>
    <string name="name_goods">Название товара</string>
    <string name="favorite">Избранное</string>
    <string name="price">Цена:</string>
    <string name="question_in_dialog">Вы уверенны в этом?</string>
    <string name="description_dialog">Ваш заказ отправится в корзину.</string>
    <string name="confirm">подтверждаю</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="enter_display_name">Введите отображаемое имя</string>
    <string name="purpose">Цель проекта:</string>
    <string name="intro">Цель проекта - выполнить тестовое задание, для трудоустройства на новую работу, а также для повышения навыков в android-разработке.</string>
    <string name="our_team">Наш  коллектив</string>
    <string name="team">Штомов Александр Сергеевич</string>
    <string name="permit_authorisation">Авторизируйтесь в приложении</string>
    <string name="permit_profile">Сначала заполните свой профиль</string>
    <string name="image_not_selected">Изображение не выбрано. Нажмите на камеру, чтобы выбрать изображение профиля</string>
    <string name="name_required">Имя обязательно</string>
    <string name="updated_successfully">Профиль успешно обновлен</string>
    <string name="error_occured">Произошла ошибка</string>
    <string name="select_image">Выберите изображение для профиля</string>
    <string name="email_sent">Письмо с подтверждением отправлено</string>
    <string name="email_not_verified">Почта не подтверждена(кликните здесь, чтобы подтвердить)</string>
    <string name="verified">Подтверждено</string>
    <string name="permit_message">Сообщение не может быть пустым</string>
    <string name="feedback_valuable">Ваш отзыв очень важен для нас</string>
    <string name="feedback_single">Отзыв</string>
    <string name="send">Отправить</string>
    <string name="message_discarded">Сообщение отклонено</string>
    <string name="type_your_message">Введите ваше сообщение здесь</string>
    <string name="name">Имя</string>
    <string name="order_in_bucket">Можно продолжить оформление заказа в корзине</string>
    <string name="welcom">Приветствуем Вас</string>
    <string name="discribe_welcom">Наши цены приятно Вас удивят</string>
    <string name="weiting_goods">Ваши покупки ждут Вас</string>
    <string name="describe_second_screen">Мы доставим Вам товар максимально быстро</string>
    <string name="free_delivery">Бесплатная доставка</string>
    <string name="sign_up_single">Зарегистрироваться</string>
    <string name="already_have_an_account_login">Уже есть аккаунт? Авторизоваться</string>
    <string name="size">Размер</string>
    <string name="in_bucket">В корзину</string>
    <string name="describe_product">Описание товара</string>
    <string name="description">Описание</string>
    <string name="color">Цвет</string>
    <string name="message">Сообщение</string>
    <string name="type_your_message_here">Введите Ваше сообщение здесь</string>
</resources>
