<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="25dp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="4"
        android:layout_marginLeft="10dp"
        android:textColor="#0B160B"
        android:hint="@string/type_your_message"/>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/send"
        android:background="#D764DDC6"
        android:elevation="8dp"
        android:textColor="#000000"/>
</LinearLayout>