<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/title_home"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_centerHorizontal="true"
                android:text="@string/subscribe"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_box1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_subscribe"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_jewelry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/jewelry"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_beauty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/beauty"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_box2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_box1"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_electric"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/electric"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_travel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/travel"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_box3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_box2"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_all_for_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/all_for_home"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_entertainment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/entertainment"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_box4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_box3"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_food_delivery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/food_delivery"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_services"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/services"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_box5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_box4"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_finance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/finance"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_closing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/closing"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/ll_box5"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:background="@color/Black"
                android:orientation="horizontal" />

            <LinearLayout

                android:id="@+id/ll_box6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_line"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_china_shop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/china_goods"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bt_foreign_shop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/foreign_brand"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_box7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_box6"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_all_shops"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/all_goods"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>